--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Meu PWA",
   "short_name": "PWA",
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#ffffff",
   "theme_color": "#2c3e50",
   "orientation": "landscape-primary",
